--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "commit": "cz",
+    "lint": "next lint --max-warnings=0",
+    "commit": "git-cz",
     "prepare": "husky install",
     "preview": "vite preview"
   },
@@ -25,6 +25,8 @@
     "@rocketseat/eslint-config": "^2.1.0",
     "axios": "^1.6.1",
     "formik": "^2.4.5",
+    "lint-staged": "^15.1.0",
+    "node-fetch": "^2.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
@@ -35,6 +37,7 @@
   "devDependencies": {
     "@commitlint/cli": "^18.4.2",
     "@commitlint/config-conventional": "^18.4.2",
+    "@types/node-fetch": "^2.6.9",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
