--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-icons": "^4.12.0",
     "react-router": "^6.18.0",
     "react-router-dom": "^6.18.0",
+    "tailwind-variants": "^0.1.18",
     "yup": "^1.3.2"
   },
   "devDependencies": {
@@ -54,7 +55,8 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-tsconfig-paths": "^4.2.1"
   },
   "config": {
     "commitizen": {
