--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-icons": "^4.12.0",
     "react-router": "^6.18.0",
     "react-router-dom": "^6.18.0",
+    "tailwind-merge": "^2.0.0",
     "tailwind-variants": "^0.1.18",
     "yup": "^1.3.2"
   },
