--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
     "axios": "^1.6.1",
+    "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "lint-staged": "^15.1.0",
     "node-fetch": "^2.6.7",
