chore(core): adding tests libraries

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,5 +30,6 @@
 
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "pages/trabalhos/[slug]"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "types": ["node", "jest", "@testing-library/jest-dom"]
 }
