--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rcf-eventos",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "type": "commonjs",
   "homepage": "./",
   "scripts": {
     "dev": "vite",
@@ -10,7 +10,9 @@
     "lint": "next lint --max-warnings=0",
     "commit": "git-cz",
     "prepare": "husky install",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest --watch",
+    "test:cov": "jest --coverage"
   },
   "lint-staged": {
     "/**/*": [
@@ -39,8 +41,16 @@
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@commitlint/cli": "^18.4.2",
     "@commitlint/config-conventional": "^18.4.2",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.12",
     "@types/node-fetch": "^2.6.9",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
@@ -48,12 +58,16 @@
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.16",
+    "babel-jest": "^29.7.0",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "husky": "^8.0.3",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.0.2",
@@ -64,5 +78,14 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "jest": {
+    "testEnvironment": "jest-environment-jsdom",
+    "setupFilesAfterEnv": [
+      "<rootDir>/.jest/setup-tests.ts"
+    ],
+    "collectCoverageFrom": [
+      "<rootDir>/src/**/*.{js,ts,jsx,tsx}"
+    ]
   }
 }
